--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         <thead>
           <tr>
             <th>Name</th>
-            <th>Date Modified</th>
             <th>Size</th>
             <th>Type</th>
           </tr>
@@ -73,8 +72,6 @@
         <td><i class="icon-file i-file-or-folder"  style="margin-left:calc(({{numLevels}} * 16px) + 4px);"></i>
         <a href="{{url}}">{{simpleFilename}}</a></td>
       {{/if}}
-      <td>{{friendlyLastModified}}</td>
-
       <td>{{friendlySizeName}}</td>
       <td>{{type}}</td>
     </tr>
@@ -108,10 +105,9 @@
 
 
     // POJO describing a file or a folder
-    function FileOrFolder(lastModified, etag, size, key){
+    function FileOrFolder(etag, size, key){
       var self = this;
 
-      self.lastModified = lastModified;
       self.etag = etag;
       self.size = size;
       self.key = key;
@@ -126,7 +122,6 @@
       self.friendlySizeName = toFriendlySizeName(parseInt(self.size,10));
       var foundTypes = TYPE_PATTERN.exec(self.simpleFilename);
       self.type = self.isFolder ? 'Folder ' : (foundTypes ? (foundTypes[1].toUpperCase() + ' file') : 'Unknown');
-      self.friendlyLastModified = moment(lastModified).format('MMM Do YYYY, hh:mm:ss a');
     }
 
     function onAjaxSuccess(xml) {
@@ -152,7 +147,6 @@
         }
 
         var fileOrFolder = new FileOrFolder(
-           $element.find('LastModified').text(),
            $element.find('ETag').text(),
            $element.find('Size').text(),
            $element.find('Key').text()
